--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,15 @@
 @import "tailwindcss";
 
 @theme {
+
+  /* screen */
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1536px;
+
+  /* typography */
   --font-nunito: 'Nunito', 'sans-serif';
   --color-primary: #93CFFA;
   --color-secondary: #1C2444;
