--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import "tailwindcss";
 
 @theme {
-
   /* screen */
   --breakpoint-sm: 640px;
   --breakpoint-md: 768px;
@@ -11,9 +10,24 @@
   --breakpoint-2xl: 1536px;
 
   /* typography */
-  --font-nunito: 'Nunito', 'sans-serif';
-  --color-primary: #93CFFA;
-  --color-secondary: #1C2444;
+  --font-nunito: "Nunito", "sans-serif";
+  --color-primary: #93cffa;
+  --color-secondary: #1c2444;
+}
+
+.overflow-y-auto::-webkit-scrollbar {
+  width: 6px;
+}
+.overflow-y-auto::-webkit-scrollbar-track {
+  background: transparent;
+  margin: 4px 0;
+}
+.overflow-y-auto::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+}
+.overflow-y-auto::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.3);
 }
 /* 
 :root {
